# JARVIS-AI

./: .editorconfig  .env.example  .env.llm  .env.parallel  .flake8  .flake8-new-only  .gitignore  .gitleaks.toml  .jarvis_hud_binary_hash  .pre-commit-config.yaml  ACTION_EXECUTION_GAP_ANALYSIS.md  ADAPTIVE_CLICKER_CAPABILITIES.md  ADVANCED_DISPLAY_REFERENCE_HANDLER.md  ADVANCED_ML_ROUTING.md  AGI_OS_ROADMAP.md  AIRPLAY_DISCOVERY_IMPLEMENTATION.md  APPLE_WATCH_REQUIREMENT_EXPLAINED.md  BACKEND_STARTUP_ISSUE_SUMMARY.md  BEAST_MODE_INTEGRATION_VERIFICATION.md  BROWSER_CONNECTION_FIX.md  CAI_ARCHITECTURE.md  CAPTURERESULT_FIX.md  CHANGELOG.md  CI_FAILURE_REPORT.md  CLAUDE_AI_WORKFLOWS.md  CLAUDE_API_SETUP.md  CLAUDE_INTEGRATION.md  CLAUDE_INTEGRATION_SUCCESS.md  CLAUDE_ONLY_SETUP.md  CLAUDE_SETUP_STATUS.md  CLEANUP_BUG_FIX.md  CLEANUP_INTEGRATION_COMPLETE.md  CLEANUP_PROXIMITY_SYSTEM.md  CLOSE_APP_FIX.md  CLOUD_SQL_PROXY_SETUP.md  COMPLETE_PROXIMITY_DISPLAY_SYSTEM.md  COMPONENT_WARMUP_ENHANCEMENT.md  COMPUTER_USE_IMPLEMENTATION_SUMMARY.md  COMPUTER_USE_INTEGRATION.md  COMPUTER_USE_QUICK_START.md  (+383 more)
.github/: GITHUB_ACTIONS_GUIDE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
backend/: .env.cpu_limits  .env.example  .gitignore  ADAPTIVE_VOICE_RECOGNITION.md  ADVANCED_PIPELINE_CONFIRMATION.md  ASYNC_INTEGRATION_COMPLETE.md  ASYNC_PIPELINE_INTEGRATION.md  ASYNC_PIPELINE_INTEGRATION_GUIDE.md  ASYNC_PIPELINE_INTEGRATION_STATUS.md  ASYNC_VOICE_INTEGRATION.md  BEAST_MODE_DEPLOYMENT_GUIDE.md  CLAUDE_VISION_DIRECT_SOLUTION.md  CONTEXTUAL_INTEGRATION_COMPLETE.md  CONTEXTUAL_QUERY_INTEGRATION.md  CONTEXT_AWARENESS_ENHANCEMENT.md  CONTEXT_AWARENESS_IMPLEMENTATION.md  CONTEXT_AWARENESS_STATUS.md  CONTEXT_AWARE_UNLOCK_IMPLEMENTATION.md  CONTEXT_INTELLIGENCE_FLOW.md  CONTEXT_INTELLIGENCE_IMPLEMENTATION.md  CONTEXT_INTELLIGENCE_INTEGRATION_GUIDE.md  CONTEXT_INTELLIGENCE_LOCK_UNLOCK_INTEGRATION.md  CONTEXT_INTELLIGENCE_SCENARIO_READY.md  CONTEXT_INTELLIGENCE_SUMMARY.md  COREML_ASYNC_INTEGRATION_COMPLETE.md  COREML_SETUP_STATUS.md  COREML_VOICE_INTEGRATION.md  CPU_OPTIMIZATION_REPORT.md  DESKTOP_SPACE_QUERY_FIX_COMPLETE.md  ENHANCED_DETECTION_SYSTEM.md  ENHANCED_RESOLVER_INTEGRATION_COMPLETE.md  EVENT_INTEGRATION_GUIDE.md  HOT_RELOAD_IMPLEMENTATION.md  HOW_TO_USE_ASYNC_PIPELINE.md  HUMAN_LIKE_CONTROL_CENTER_DETECTION.md  INTERPRETER_ARCHITECTURE_ANALYSIS.md  JARVIS_APP_CONTROL_FIX.md  JARVIS_AUDIO_SETUP.md  JARVIS_INTERPRETERS_OVERVIEW.md  JARVIS_MATH_GUIDE.md  (+475 more)
backend/native_extensions/: .gitignore  CMakeLists.txt  README.md  build.sh  fast_capture_wrapper.py  setup.py  setup_vision_ml.py  test_integrated_build.sh  vision_ml_router.cpp
backend/native_extensions/include/: error_handling.h  fast_capture.h
backend/native_extensions/rust_processor/: Cargo.toml  README.md  rust_processor.py
backend/native_extensions/rust_processor/src/: lib.rs
backend/native_extensions/src/: fast_capture.cpp  fast_capture.mm  python_bindings.cpp
backend/rust_extensions/: Cargo.toml  README.md  build.py
backend/rust_extensions/src/: lib.rs  memory_monitor.rs  model_loader.rs  quantization.rs
backend/vision/jarvis-rust-core/: Cargo.toml  INTEGRATION.md  build.sh  build_output.txt  jarvis_rust_core.py
backend/vision/jarvis-rust-core/src/: lib.rs
backend/vision/jarvis-rust-core/src/bridge/: mod.rs  notification_monitor.rs  objc_actor_impl.rs  objc_bridge.rs  pyo3_bindings.rs  screencapture_stream.rs  serialization.rs  supervisor.rs
backend/vision/jarvis-rust-core/src/memory/: advanced_pool.rs  allocator.rs  mod.rs  mod.rs.bak  pool.rs  recycler.rs  zero_copy.rs
backend/vision/jarvis-rust-core/src/quantized_ml/: inference.rs  mod.rs  optimization.rs  training.rs
backend/vision/jarvis-rust-core/src/runtime/: cpu_affinity.rs  mod.rs  task_pool.rs  work_stealing.rs
backend/vision/jarvis-rust-core/src/vision/: anomaly_detection.rs  bloom_filter.rs  bloom_filter_network.rs  capture.rs  capture_basic.rs.bak  capture_old.rs.bak  compression.rs  goal_patterns.rs  integration_pipeline.rs  intervention_engine.rs  macos_optimization.rs  metal_accelerator.rs  mod.rs  pattern_mining.rs  predictive_engine.rs  processing.rs  semantic_cache_lsh.rs  sliding_window.rs  sliding_window_bindings.rs  solution_matching.rs  spatial_quadtree.rs
backend/vision/jarvis-rust-core/src/vision/shaders/: vision_shaders.metal
backend/voice/coreml/: CMakeLists.txt  build.sh  convert_jit_to_coreml.py  create_mock_models.py  download_silero_vad.py  python_coreml_vad.py  voice_engine.hpp  voice_engine.mm  voice_engine_bridge.py
config/: neural_mesh.yaml
diagrams/: QUICK_REFERENCE.md  README.md
docs/: ADVANCED_HYBRID_SYNC_V2.md  ADVANCED_PROCESS_DETECTION.md  API.md  APPLE_DEVELOPER_ID_SETUP.md  FEEDBACK_LEARNING_AND_COMMAND_SAFETY.md  FINAL_INTEGRATION_STATUS.md  FIX_SUMMARY_TORCHVISION.md  FOLLOWUP_SYSTEM_GUIDE.md  HYBRID_CLOUD_STARTUP.md  HYBRID_DATABASE_SYNC.md  HYBRID_DATABASE_SYNC_IMPLEMENTATION.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_GUIDE_FEEDBACK_AND_SAFETY.md  MACOS_HUD_LAUNCHER_DOCUMENTATION.md  MANUAL_TESTING_GUIDE.md  MULTI_SPACE_CONTEXT_SYSTEM.md  NOTIFICATION_DETECTION_FIX.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PRD_IMPLEMENTATION_CHECKLIST.md  PRD_TIS_IMPLEMENTATION_STATUS.md  README.md  RECENT_IMPROVEMENTS.md  TERMINAL_FOLLOWUP_FEATURE.md  THREAD_CLEANUP_AND_DATABASE_FIXES.md  THREAD_CLEANUP_ARCHITECTURE.md  TORCHAUDIO_COMPATIBILITY_FIX.md  UNIFIED_CONTEXT_BRIDGE_COMPLETE.md  V17.7.1_RELEASE_SUMMARY.md  VISION_TESTING_GUIDE.md  VOICE_BIOMETRICS_SYSTEM.md  VOICE_EMBEDDING_RECONSTRUCTION_FIX.md  VOICE_INTEGRATION_GUIDE.md  VOICE_PIPELINE_NOTES.md  Voice-Biometric-Authentication-Debugging-Guide.md  WAKE_WORD_UI_IMPROVEMENTS.md  WORKSPACE_CAPTURE_FIX.md  v13.11.0_RELEASE_NOTES.md
examples/: sai_integration_example.py
frontend/: .env.example  .prettierignore  FRONTEND_INTEGRATION_GUIDE.md  package-lock.json  package.json
landing-page/: index.html  loading.html
macos-hud/: README.md
scripts/: clean_duplicates.sh  cleanup_orphaned_vms.sh  gcp_startup.sh  generate_startup_script.py  (+6 more)
(+1656 files in other folders)
